Pantalla de Login creada y modificado el método de HomeActivity para que aparezca el nombre del usuario en vez de (Jugador)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <!-- Registramos DerrotaActivity -->
         <activity android:name=".uii.DerrotaActivity" />
 
+        <!-- Registramos LoginActivity -->
+        <activity android:name=".uii.LoginActivity" />
+
     </application>
 
 </manifest>
