--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
 
         <service android:name=".MusicService" android:exported="false" />
 
+        <!-- Registramos LoginActivity -->
+        <activity android:name=".uii.LoginActivity" android:exported="true" />
+
         <!-- Registramos HomeActivity -->
         <activity android:name=".uii.HomeActivity" android:exported="true" />
 
