--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permisos para guardar en calendario -->
+    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
+    <uses-permission android:name="android.permission.READ_CALENDAR"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,7 +20,6 @@
         <activity
             android:name=".uii.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.GoldenHorses">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,7 +46,6 @@
 
         <!-- Registramos DerrotaActivity -->
         <activity android:name=".uii.DerrotaActivity" />
-
     </application>
 
 </manifest>
