Tu mensaje de commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         <!-- Registramos DerrotaActivity -->
         <activity android:name=".uii.DerrotaActivity" />
 
+        <!-- Registramos Ayuda -->
+        <activity android:name=".uii.HelpActivity" />
+
     </application>
 
 </manifest>
