ya me funciona el ranking, falta el premio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,8 @@
 
         <!-- Registramos Ayuda -->
         <activity android:name=".uii.HelpActivity" />
+        <!-- RankingActivity -->
+        <activity android:name=".ui.RankingActivity"></activity>
 
     </application>
 
