--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,8 +56,9 @@
 
         <!-- Registramos Ayuda -->
         <activity android:name=".uii.HelpActivity" />
-        <!-- RankingActivity -->
-        <activity android:name=".ui.RankingActivity"></activity>
+
+        <!-- Registramos RankingActivity -->
+        <activity android:name=".uii.RankingActivity" />
 
     </application>
 
